--- a/magic-web/sp-05-free-canvas/index.html
+++ b/magic-web/sp-05-free-canvas/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>Free Canvas</title>
         <style>
             html,
@@ -46,8 +43,8 @@
                         rgba(0, 0, 0, 1) 16px 17px,
                         rgba(0, 0, 0, 0) 18px
                     ),
-                    linear-gradient(rgba(0, 0, 0, 1) 0 0), linear-gradient(rgba(0, 0, 0, 1) 0 0),
-                    linear-gradient(rgba(0, 0, 0, 1) 0 0), linear-gradient(rgba(0, 0, 0, 1) 0 0);
+                    linear-gradient(rgba(0, 0, 0, 1) 0 0), linear-gradient(rgba(0, 0, 0, 1) 0 0), linear-gradient(rgba(0, 0, 0, 1) 0 0),
+                    linear-gradient(rgba(0, 0, 0, 1) 0 0);
                 background-size: 100% 100%, 2px 7px, 2px 7px, 7px 2px, 7px 2px;
                 background-position: 0 0, 19px 0, 19px 33px, 0 19px, 33px 19px;
                 background-repeat: no-repeat;
@@ -65,8 +62,8 @@
 
         <div class="reset"></div>
 
-        <script src="../libs/Vector2D.js"></script>
-        <script src="../libs/parametric.js"></script>
+        <script src="../libs/Vector2D.babel.js"></script>
+        <script src="../libs/parametric.babel.js"></script>
         <script src="./script.babel.js" type="module"></script>
     </body>
 </html>
