--- a/cjjyg/index.html
+++ b/cjjyg/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | ChaoJiJieYaGuan</title>
+  <title>Cocos Creator | 超级解压管</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
