--- a/cjjyg/index.html
+++ b/cjjyg/index.html
@@ -54,10 +54,10 @@
 <script src="src/system.bundle.543e6.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="src/import-map.99690.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="src/import-map.5550f.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.c4f94.js').catch(function(err) { console.error(err); })
+    System.import('./index.5f2fe.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
