--- a/cjjyg/index.html
+++ b/cjjyg/index.html
@@ -57,7 +57,7 @@
 <script src="src/import-map.5550f.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.5f2fe.js').catch(function(err) { console.error(err); })
+    System.import('./index.aaf93.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
